# fo-core

./: .auto-claude-security.json  .auto-claude-status  .coderabbit.yaml  .codespellrc  .coverage.rahul-m1-mbp_local.pid43879.XyJFv1sx.HD0W1rVgOH6h  .coverage.rahul-m1-mbp_local.pid43880.Xr2fe8zx.HRdUGW0fe8Th  .coverage.rahul-m1-mbp_local.pid43881.XBPELxgx.HwTpq0zgD1Wh  .coverage.rahul-m1-mbp_local.pid43882.Xx9p18Jx.HXDBrB5vifXh  .coverage.rahul-m1-mbp_local.pid43883.XhblPN6x.HJZfQCSXp0jh  .coverage.rahul-m1-mbp_local.pid43884.XzAyHRsx.HdUEVImjfjch  .coverage.rahul-m1-mbp_local.pid43885.X68OEDvx.HHRi6Rr1380h  .coverage.rahul-m1-mbp_local.pid43886.X8KBGbtx.H1HpXYoBtdfh  .dockerignore  .env.example  .gitignore  .gitmodules  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .pymarkdown.json  .pyre_configuration  BUSINESS_REQUIREMENTS_DOCUMENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO_COMPLETE.md  DEVELOPER.md  DOCUMENTATION_SUMMARY.md  Dockerfile  Dockerfile.dev  EXECUTIVE_SUMMARY.md  GREEN_PHASE_SUMMARY.md  MIGRATION_COMPLETE.md  PHASE1_PROGRESS.md  POLISH_COMPLETE.md  PROJECT_STATUS.md  PR_90_DOCUMENTATION_INDEX.md  PR_90_REVIEW_ACTION_PLAN.md  PYTHON39_MODULE_ANALYSIS.md  QUICK_FIX_GUIDE.md  (+25 more)
desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  macos-entitlements-debug.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  notifications.rs  sidecar.rs  splash.html  splash.rs  tray.rs  updater.rs
file_organizer_v2/: .coverage  BUG_REPORT.md  CHANGELOG.md  PYTHON39_DEPENDENCY_ANALYSIS.md  PYTHON_VERSION_MIGRATION_ANALYSIS.md  README.md  demo.py  file_organizer.spec  migrate_to_py39.sh  mkdocs.yml  pyproject.toml  test_image_dedup_with_images.py  test_quality.py  tox.ini
file_organizer_v2/.claude/scripts/: pre-commit-validation.sh
file_organizer_v2/alembic/: env.py  script.py.mako
file_organizer_v2/alembic/versions/: 20260216_0001_initial_web_storage.py
file_organizer_v2/docs/: BUILDING.md  CLI_DEDUPE.md  CLI_REFERENCE.md  CODERABBIT_FIXES.md  CONFIGURATION.md  DB_MIGRATIONS.md  EPUB_PROCESSING.md  STREAM_C_SUMMARY.md  TROUBLESHOOTING.md  USER_GUIDE.md  api-reference.md  architecture-guide.md  cli-reference.md  deployment-guide.md  faq.md  fix_coderabbit_issues.py  getting-started.md  index.md  python-version-migration.md  test_preference_tracker.py  tui.md
file_organizer_v2/docs/admin/: configuration.md  index.md  installation.md  security.md  troubleshooting.md
file_organizer_v2/docs/api/: analysis-endpoints.md  authentication.md  file-endpoints.md  index.md  johnny-decimal-api.md  organization-endpoints.md  para-api.md  search-endpoints.md  websocket-api.md
file_organizer_v2/docs/developer/: api-clients.md  architecture.md  index.md  plugin-development.md  testing.md
file_organizer_v2/docs/para/: examples.md  rule-examples.md  rule-system.md
file_organizer_v2/docs/phase-3/: README.md  file-formats.md  johnny-decimal.md  migration-guide.md  para-methodology.md  troubleshooting.md
file_organizer_v2/docs/phase-6/: integration-framework.md  marketplace.md  plugin-architecture.md
file_organizer_v2/docs/phase4/: README.md  analytics.md  api-reference.md  deduplication.md  intelligence.md  smart-features.md  undo-redo.md
file_organizer_v2/docs/tutorials/: README.md  analytics-overview.md  audio-organization.md  para-jd-setup.md  tui-tour.md
file_organizer_v2/docs/web-ui/: analysis-search.md  file-management.md  getting-started.md  index.md  organization.md  settings.md
file_organizer_v2/examples/: demo_comparison_viewer.py  epub_processing_example.py  image_dedup_example.py
file_organizer_v2/legacy_docs/: API_CLIENTS.md  BUILDING.md  CLI_DEDUPE.md  CLI_REFERENCE.md  CODERABBIT_FIXES.md  CONFIGURATION.md  EPUB_PROCESSING.md  STREAM_C_SUMMARY.md  USER_GUIDE.md  api-reference.md  architecture-guide.md  deployment-guide.md  fix_coderabbit_issues.py  johnny-decimal-api.md  para-api.md  python-version-migration.md  test_preference_tracker.py
file_organizer_v2/legacy_docs/para/: examples.md  rule-examples.md  rule-schema.yaml
file_organizer_v2/legacy_docs/phase-3/: README.md  file-formats.md  johnny-decimal.md  migration-guide.md  para-methodology.md  troubleshooting.md
file_organizer_v2/legacy_docs/phase-6/: marketplace.md  plugin-architecture.md
file_organizer_v2/legacy_docs/phase4/: README.md  analytics.md  api-reference.md  deduplication.md  examples.md  intelligence.md  smart-features.md  undo-redo.md
file_organizer_v2/legacy_docs/tutorials/: analytics-overview.md  audio-organization.md  copilot-workflow.md  daemon-watch.md  dedupe-quickstart.md  para-jd-setup.md
file_organizer_v2/scripts/: build.py  build_config.py  build_linux.sh  build_macos.sh  build_windows.iss  build_windows.ps1  create_sample_images.py  debug_single_file.py  deploy.py  docker_utils.py  generate_plugin_openapi.py  publish.py  release.py  test_improved_processing.py  test_models.py  test_text_processing.py
file_organizer_v2/src/file_organizer/: __init__.py  _compat.py  version.py
file_organizer_v2/tests/: conftest.py  test_api_auth.py  test_api_config.py  test_api_dedupe.py  test_api_files.py  test_api_health.py  test_api_integrations.py  test_api_marketplace.py  test_api_organize.py  test_api_security.py  test_api_system.py  test_api_websocket.py  test_audio_model.py  test_build_artifacts.py  test_build_config.py  test_build_regression.py  test_build_workflows.py  test_cache_backend.py  test_cli_analytics_integration.py  test_cli_api.py  test_cli_config_integration.py  test_cli_daemon.py  test_cli_dedupe_v2.py  test_cli_interactive.py  test_cli_main.py  test_cli_marketplace.py  test_cli_model_integration.py  test_cli_suggest.py  test_cli_undo_redo_integration.py  test_client_async.py  test_client_sync.py  test_config_manager.py  test_config_schema.py  test_copilot_engine.py  test_copilot_rules.py  test_database_layer.py  test_db_migrations.py  test_db_models.py  test_model_manager.py  test_organizer_integration.py  (+22 more)
file_organizer_v2/tests/api/: test_jobs.py
(+3021 files in other folders)
