[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-file-organizer"
version = "2.0.0-alpha.3"
description = "AI-powered local file management with state-of-the-art models"
authors = [
    {name = "Local File Organizer Team", email = "noreply@example.com"}
]
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.11"
keywords = ["file-management", "ai", "organization", "local-llm", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core AI inference
    "ollama>=0.1.0",  # 0.x — unstable API, keep >=

    # File processing (core image only)
    "Pillow~=10.0",

    # NLP and data science
    "nltk~=3.8",
    "numpy~=1.24",  # Numerical computing (used in dedup, video, optimization)
    "tqdm~=4.66",  # Progress bars (used in CLI dedup)

    # CLI and UI
    "typer[all]~=0.12",
    "rich~=13.0",
    "textual~=0.50",

    # API and async
    "fastapi~=0.109",
    "starlette~=0.35",  # Direct imports: BaseHTTPMiddleware, Response, WebSocketState
    "aiofiles~=23.0",  # Required by Starlette StaticFiles for async file serving
    "jinja2~=3.1",
    "markupsafe~=3.0",  # Direct import in web csrf_input; also a jinja2 transitive dep
    "uvicorn[standard]~=0.27",
    "websockets~=16.0",
    "httpx~=0.26",
    "python-multipart>=0.0.9",  # 0.x — unstable API, keep >=
    # Security: ecdsa is transitive via python-jose. Pin >= 0.19.2 for CVE-2026-33936.
    # Pygments is transitive via rich/textual. Pin >= 2.20.0 for CVE-2026-4539.
    "ecdsa>=0.19.2",
    "Pygments>=2.20.0",
    "python-jose~=3.3",
    "bcrypt>=4.0.0,<6.0.0",
    # Database
    "sqlalchemy~=2.0",
    "alembic~=1.13",

    # Task queue
    "redis~=7.4",
    # Configuration
    "pyyaml~=6.0",  # YAML config parsing
    "platformdirs~=3.0",  # Cross-platform config/data directory resolution

    # Utilities
    "pydantic~=2.5",
    "pydantic-settings~=2.1",
    "email-validator~=2.1",
    "python-dotenv~=1.0",
    "click~=8.1",
    "watchdog~=3.0",  # File system event handler

    # System utilities
    "psutil~=5.9",  # System resource monitoring

    # Logging
    "loguru>=0.7.0",  # 0.x — unstable API, keep >=
]

[project.optional-dependencies]
parsers = [
    "PyMuPDF~=1.23",
    "python-docx~=1.0",
    "openpyxl~=3.1",
    "python-pptx>=0.6.0",  # 0.x — unstable API, keep >=
    "ebooklib>=0.18",  # 0.x — unstable API, keep >=
    "beautifulsoup4~=4.12",
    "lxml~=4.9",
]

web = [
    "fastapi~=0.109",
    "jinja2~=3.1",
    "uvicorn[standard]~=0.27",
    "websockets~=16.0",
    "httpx~=0.26",
    "python-multipart>=0.0.9",  # 0.x — unstable API, keep >=
    # Security: ecdsa is transitive via python-jose. Pin >= 0.19.2 for CVE-2026-33936.
    # Pygments is transitive via rich/textual. Pin >= 2.20.0 for CVE-2026-4539.
    "ecdsa>=0.19.2",
    "Pygments>=2.20.0",
    "python-jose~=3.3",
    "bcrypt>=4.0.0,<6.0.0",

    "redis~=7.4",
]

dev = [
    "pytest~=7.4",
    "pytest-asyncio~=0.23",
    "pytest-cov~=4.1",
    "pytest-mock~=3.12",
    "pytest-timeout>=2.2.0,<2.5.0",  # 2.4.0 regression: timer thread not cancelled on Windows; crashes during teardown (AssertionError in read_global_capture)
    "pytest-xdist~=3.5",
    "pytest-randomly~=3.15",
    "mypy~=1.8",
    "types-PyYAML~=6.0",
    "ruff>=0.1.0",  # 0.x — unstable API, keep >=
    "black~=23.12",
    "isort~=5.13",
    "pre-commit~=3.6",
    "codespell~=2.2",
    "faker~=40.12",
    "pytest-benchmark~=4.0",
    "interrogate~=1.5",  # Docstring coverage measurement
    "pymarkdownlnt>=0.9.25",  # 0.x — unstable API, keep >=; Markdown linting
    "deptry>=0.16.0",  # 0.x — unstable API, keep >=; Unused dependency detection
    "diff-cover~=7.0",  # Diff coverage gate (local pre-commit + CI validation)
    "asgi-lifespan~=2.1",  # ASGI lifespan management for integration tests
    "pytest-playwright>=0.5.0",  # Browser-based E2E smoke tests (requires: playwright install chromium)
]

cloud = [
    "openai~=1.0",  # OpenAI-compatible API provider (OpenAI, Groq, LM Studio, vLLM)
]

llama = [
    # Security note (2026-03-16): diskcache 5.6.3 (GHSA-w8v5-vhqr-4h9v) is a transitive
    # dep of llama-cpp-python. Risk accepted: diskcache is never imported or called by
    # application code. No patched version exists upstream.
    "llama-cpp-python>=0.2.0",  # 0.x — unstable API, keep >=; llama.cpp C bindings
]

mlx = [
    "mlx-lm>=0.0.19; platform_system == 'Darwin'",  # MLX runtime is only supported on Darwin
]

claude = [
    "anthropic>=0.20.0",  # 0.x — unstable API, keep >=; Anthropic Claude API provider
]

gui = [
    "PyQt6~=6.6",
]

desktop = [
    # pywebview wraps the OS-native webview engine (WebKit on macOS/Linux,
    # Edge WebView2 on Windows) — no Chromium/Electron overhead.
    # 0.x numbering ended at 3.x; project uses SemVer from 4.0 onward.
    "pywebview>=4.4",
    # Server-side deps required at runtime inside the desktop process.
    "uvicorn[standard]~=0.27",
]

audio = [
    "faster-whisper~=1.0",
    "torch~=2.1",  # GPU acceleration for audio transcription
    "mutagen~=1.47",  # Audio metadata extraction
    "tinytag~=1.10",  # Lightweight audio metadata fallback
    "pydub>=0.25.0",  # 0.x — unstable API, keep >=; Audio manipulation
]

video = [
    "opencv-python~=4.8",  # Video frame processing
    "scenedetect[opencv]>=0.6.0",  # 0.x — unstable API, keep >=; Scene detection algorithms
]

dedup = [
    "imagededup>=0.3.0",  # 0.x — unstable API, keep >=; Image similarity and duplicate detection
    "scikit-learn~=1.4",  # ML-based text similarity for deduplication
    "pypdf~=4.0",  # PDF text extraction fallback in dedup extractor
    "striprtf>=0.0.26",  # 0.x — unstable API, keep >=; RTF file text extraction in dedup extractor
]

archive = [
    "py7zr>=0.20.0",  # 0.x — unstable API, keep >=; 7Z archive support
    "rarfile~=4.1",  # RAR archive support (requires unrar tool)
]

scientific = [
    "h5py~=3.10",  # HDF5 file format support
    "netCDF4~=1.6",  # NetCDF file format support
    "scipy~=1.11",  # MATLAB .mat file support
]

cad = [
    "ezdxf~=1.1",  # DXF/DWG CAD file format support
]

build = [
    "pyinstaller~=6.0",  # Cross-platform executable packaging
]

docs = [
    "mkdocs~=1.5",
    "mkdocs-material~=9.5",
    "pymdown-extensions~=10.7",
    "mkdocs-minify-plugin>=0.8.0",  # 0.x — unstable API, keep >=
    "mkdocstrings[python]>=0.24.0",  # 0.x — unstable API, keep >=
]

search = [
    "rank-bm25>=0.2.0",  # 0.x — unstable API, keep >=
    "scikit-learn~=1.4",
]

all = [
    "local-file-organizer[dev,gui,cloud,llama,mlx,claude,audio,video,dedup,archive,scientific,cad,build,parsers,web,search]",
]

[project.scripts]
file-organizer = "file_organizer.cli:main"
fo = "file_organizer.cli:main"  # Short alias
file-organizer-desktop = "file_organizer.desktop.app:launch"  # Native desktop window (requires [desktop] extra)

[project.urls]
Homepage = "https://github.com/curdriceaurora/Local-File-Organizer"
Documentation = "https://github.com/curdriceaurora/Local-File-Organizer#readme"
Repository = "https://github.com/curdriceaurora/Local-File-Organizer"
Issues = "https://github.com/curdriceaurora/Local-File-Organizer/issues"
Changelog = "https://github.com/curdriceaurora/Local-File-Organizer/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
file_organizer = [
    "py.typed",
    "config/*.yaml",
    "web/templates/**/*.html",
    "web/static/**/*",
]

# Ruff configuration (linting and formatting)
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".claude/",
    ".venv*/",
    "technical-debt/",
    "fix_coderabbit_issues.py",
    "test_preference_tracker.py",
]
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C901", # mccabe complexity
    "UP",  # pyupgrade
    "D",   # pydocstyle (google convention)
    "RUF100",  # stale noqa comments
    "DTZ",  # datetime timezone rules (DTZ001-DTZ007, DTZ011-DTZ012)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ANN401", # **kwargs: Any is acceptable in abstract/polymorphic interfaces
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["D"]
"scripts/**/*.py" = ["D"]
"scripts/docker_utils.py" = ["D", "C901"]
# C901 ratchet baseline — functions exceeding complexity 15 (2026-02-28)
# Each entry allows existing complex functions; new ones must stay under 15.
# Note: 9 files refactored in 2026-03 (task 005), 3 more in issue #1022.
# Remaining files with complexity > 15:
"src/file_organizer/core/organizer.py" = ["C901"]  # organize: 33

# MyPy configuration (type checking)
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=file_organizer",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=95",
    "--timeout=30",
    # Branch coverage baseline (integration tests only):
    # Measured 2026-03-21 via measure-integration-coverage.sh: TOTAL ~49%
    # Enforced floor: 45% branch — lives in .github/workflows/ci.yml (test-integration job).
    # measure-integration-coverage.sh is a local measurement tool only; it does not enforce the floor.
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "ci: marks tests intended for PR CI validation",
    "smoke: marks tests for fast pre-commit validation (<30s total)",
    "no_ollama: marks tests that verify fallback behavior when Ollama is unavailable",
    "regression: marks tests intended for full regression runs",
    "e2e: end-to-end tests against real file trees (no Ollama required)",
    "benchmark: performance benchmark tests (use --benchmark-only to run)",
    "asyncio: marks tests as async (requires pytest-asyncio)",
    "playwright: browser-based E2E tests (requires playwright install chromium; run with --override-ini='addopts=')",
]
filterwarnings = [
    "error::DeprecationWarning:file_organizer",
    "error::PendingDeprecationWarning:file_organizer",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:google",
    "ignore::DeprecationWarning:importlib",
    "ignore::pytest_benchmark.logger.PytestBenchmarkWarning",
]
# pytest-benchmark settings (pass via CLI: --benchmark-min-rounds=3 --benchmark-max-time=30.0)
# benchmark_ prefix keys are NOT supported as ini_options in pytest-benchmark 5.x

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Interrogate configuration (docstring coverage)
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
fail-under = 95
exclude = ["tests", "setup.py", "docs"]
verbose = 1
quiet = false
whitelist-regex = []

# deptry: unused dependency detection
# Run as: deptry src/  (scans source only)
[tool.deptry]
# First-party package — suppress DEP001 false positives from src-layout
known_first_party = ["file_organizer"]
# Only tool-only groups where packages are never imported in application code
pep621_dev_dependency_groups = ["dev", "docs", "build"]
# Map distribution names → import names for packages that differ
[tool.deptry.package_module_name_map]
"Pillow" = "PIL"
"PyMuPDF" = "fitz"
"python-docx" = "docx"
"python-pptx" = "pptx"
"beautifulsoup4" = "bs4"
"pyyaml" = "yaml"
"python-jose" = "jose"
"scikit-learn" = "sklearn"
"opencv-python" = "cv2"
"pydantic-settings" = "pydantic_settings"
"pypdf" = "pypdf"
"striprtf" = "striprtf"
"llama-cpp-python" = "llama_cpp"
"mlx-lm" = "mlx_lm"
"pywebview" = "webview"
[tool.deptry.per_rule_ignores]
# netCDF4: in scientific optional group; deptry has mixed-case matching issues
DEP001 = ["netCDF4"]
# aiofiles: Starlette StaticFiles uses it for async file serving (no direct import)
# python-multipart: FastAPI uses it for file uploads (no direct import)
# lxml: used as bs4 parser string "lxml" (not imported directly)
# email-validator: pydantic uses it for EmailStr (not imported directly)
# websockets: starlette WebSocket support (must be installed, not imported)
# python-dotenv: pydantic-settings reads .env files via this package
# jinja2: fastapi.templating wraps it (not imported directly)
# alembic: used as CLI migration tool (not imported in application code)
# openpyxl: pandas uses it for Excel I/O (not imported directly)
# local-file-organizer: self-reference in the [all] optional group
DEP002 = [
    "aiofiles",
    "python-multipart",
    "lxml",
    "email-validator",
    "websockets",
    "python-dotenv",
    "jinja2",
    "alembic",
    "openpyxl",
    "local-file-organizer",
    # pydantic-settings: pydantic's BaseSettings uses it internally; no direct import needed
    "pydantic-settings",
    # PyQt6: GUI-only dep; GUI application lives outside src/file_organizer/
    "PyQt6",
    # netCDF4: mixed-case name causes deptry matching issues; used in scientific.py
    "netCDF4",
    # ecdsa: transitive via python-jose; pinned for CVE-2026-33936
    "ecdsa",
    # Pygments: transitive via rich/textual; pinned for CVE-2026-4539
    "Pygments",
    # pywebview: desktop GUI wrapper; import name is 'webview' (mapped above); used in desktop/app.py
    "pywebview",
]
