[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fo-core"
version = "0.1.0"
description = "Streamlined CLI file organizer powered by local AI (Ollama)"
authors = [
    {name = "Local File Organizer Team", email = "noreply@example.com"}
]
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.11"
keywords = ["file-management", "ai", "organization", "local-llm", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core AI inference
    "ollama>=0.1.0",  # 0.x — unstable API, keep >=

    # File processing
    "Pillow~=10.0",
    "PyMuPDF~=1.23",           # PDF text/image extraction
    "python-docx~=1.0",        # DOCX parsing
    "openpyxl~=3.1",           # XLSX parsing
    "python-pptx>=0.6.0",      # PPTX parsing
    "ebooklib>=0.18",           # EPUB parsing
    "beautifulsoup4~=4.12",    # HTML/XML parsing
    "lxml~=6.0",               # XML backend for BS4

    # NLP and data science
    "nltk~=3.8",
    "numpy~=1.24",
    "tqdm~=4.66",

    # CLI
    "typer[all]~=0.12",
    "rich~=13.0",
    "Pygments>=2.20.0",  # Transitive via rich; pin for CVE-2026-4539

    # Database (undo/history)
    "sqlalchemy~=2.0",
    "alembic~=1.13",

    # Configuration
    "pyyaml~=6.0",
    "platformdirs~=4.9",
    "pydantic~=2.5",
    "pydantic-settings~=2.1",
    "python-dotenv~=1.0",
    "click~=8.1",

    # File watching (daemon)
    "watchdog~=3.0",

    # System utilities
    "psutil~=5.9",

    # Logging
    "loguru>=0.7.0",

    # HTTP client (updater)
    "httpx~=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest~=7.4",
    "pytest-asyncio~=0.23",
    "pytest-cov~=4.1",
    "pytest-mock~=3.12",
    "pytest-timeout>=2.2.0,<2.5.0",  # 2.4.0 regression: timer thread not cancelled on Windows; crashes during teardown (AssertionError in read_global_capture)
    "pytest-xdist~=3.5",
    "pytest-randomly~=3.15",
    "mypy~=1.8",
    "types-PyYAML~=6.0",
    "ruff>=0.1.0",  # 0.x — unstable API, keep >=
    "black~=26.3",
    "isort~=8.0",
    "pre-commit~=3.6",
    "codespell~=2.2",
    "faker~=40.12",
    "pytest-benchmark~=4.0",
    "interrogate~=1.5",  # Docstring coverage measurement
    "pymarkdownlnt>=0.9.25",  # 0.x — unstable API, keep >=; Markdown linting
    "deptry>=0.16.0",  # 0.x — unstable API, keep >=; Unused dependency detection
    "diff-cover~=7.0",  # Diff coverage gate (local pre-commit + CI validation)
]

cloud = [
    "openai~=2.31",  # OpenAI-compatible API provider (OpenAI, Groq, LM Studio, vLLM)
]

llama = [
    # Security note (2026-03-16): diskcache 5.6.3 (GHSA-w8v5-vhqr-4h9v) is a transitive
    # dep of llama-cpp-python. Risk accepted: diskcache is never imported or called by
    # application code. No patched version exists upstream.
    "llama-cpp-python>=0.2.0",  # 0.x — unstable API, keep >=; llama.cpp C bindings
]

mlx = [
    "mlx-lm>=0.0.19; platform_system == 'Darwin'",  # MLX runtime is only supported on Darwin
]

claude = [
    "anthropic>=0.20.0",  # 0.x — unstable API, keep >=; Anthropic Claude API provider
]

audio = [
    "faster-whisper~=1.0",
    "torch~=2.1",  # GPU acceleration for audio transcription
    "mutagen~=1.47",  # Audio metadata extraction
    "tinytag~=1.10",  # Lightweight audio metadata fallback
    "pydub>=0.25.0",  # 0.x — unstable API, keep >=; Audio manipulation
]

video = [
    "opencv-python~=4.8",  # Video frame processing
    "scenedetect[opencv]>=0.6.0",  # 0.x — unstable API, keep >=; Scene detection algorithms
]

dedup = [
    "imagededup>=0.3.0",  # 0.x — unstable API, keep >=; Image similarity and duplicate detection
    "scikit-learn>=1.4,<1.9",  # ML-based text similarity for deduplication
    "pypdf~=6.10",  # PDF text extraction fallback in dedup extractor
    "striprtf>=0.0.26",  # 0.x — unstable API, keep >=; RTF file text extraction in dedup extractor
]

archive = [
    "py7zr>=0.20.0",  # 0.x — unstable API, keep >=; 7Z archive support
    "rarfile~=4.1",  # RAR archive support (requires unrar tool)
]

scientific = [
    "h5py~=3.10",  # HDF5 file format support
    "netCDF4~=1.6",  # NetCDF file format support
    "scipy~=1.11",  # MATLAB .mat file support
]

cad = [
    "ezdxf~=1.1",  # DXF/DWG CAD file format support
]

build = [
    "pyinstaller~=6.0",  # Cross-platform executable packaging
]

docs = [
    "mkdocs~=1.5",
    "mkdocs-material~=9.5",
    "pymdown-extensions~=10.7",
    "mkdocs-minify-plugin>=0.8.0",  # 0.x — unstable API, keep >=
    "mkdocstrings[python]>=0.24.0",  # 0.x — unstable API, keep >=
]

search = [
    "rank-bm25>=0.2.0",  # 0.x — unstable API, keep >=
    "scikit-learn>=1.4,<1.9",
]

all = [
    "fo-core[dev,cloud,llama,mlx,claude,audio,video,dedup,archive,scientific,cad,build,search]",
]

[project.scripts]
file-organizer = "file_organizer.cli:main"
fo = "file_organizer.cli:main"  # Short alias

[project.urls]
Homepage = "https://github.com/curdriceaurora/fo-core"
Repository = "https://github.com/curdriceaurora/fo-core"
Issues = "https://github.com/curdriceaurora/fo-core/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
file_organizer = [
    "py.typed",
    "config/*.yaml",
]

# Ruff configuration (linting and formatting)
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".claude/",
    ".venv*/",
    "technical-debt/",
    "fix_coderabbit_issues.py",
    "test_preference_tracker.py",
]
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C901", # mccabe complexity
    "UP",  # pyupgrade
    "D",   # pydocstyle (google convention)
    "RUF100",  # stale noqa comments
    "DTZ",  # datetime timezone rules (DTZ001-DTZ007, DTZ011-DTZ012)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ANN401", # **kwargs: Any is acceptable in abstract/polymorphic interfaces
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["D"]
"scripts/**/*.py" = ["D"]
"scripts/docker_utils.py" = ["D", "C901"]

# MyPy configuration (type checking)
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

# Optional-dep model wrappers: mlx_lm and llama_cpp have no stubs and their
# type signatures are only visible when the packages are installed.  The files
# already carry `# pyre-ignore-all-errors` for the same reason.
[[tool.mypy.overrides]]
module = [
    "file_organizer.models.mlx_text_model",
    "file_organizer.models.llama_cpp_text_model",
]
ignore_errors = true

# Optional-dep modules: mutagen, ezdxf, redis stubs are only available when
# the corresponding extras are installed (audio, cad, cloud).  Without the extra,
# the type: ignore comments that suppress attr-defined / assignment errors become
# "unused" and trigger warn_unused_ignores.  Disable that check per-module so
# both CI (no extras) and local dev (with extras) pass mypy cleanly.
[[tool.mypy.overrides]]
module = [
    "file_organizer.services.audio.metadata_extractor",
    "file_organizer.utils.readers.cad",
    "file_organizer.events.stream",
    "file_organizer.services.deduplication.extractor",
]
warn_unused_ignores = false

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=file_organizer",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=95",
    "--timeout=30",
    # Branch coverage baseline (integration tests only):
    # Measured 2026-03-21 via measure-integration-coverage.sh: TOTAL ~49%
    # Enforced floor: 45% branch — lives in .github/workflows/ci.yml (test-integration job).
    # measure-integration-coverage.sh is a local measurement tool only; it does not enforce the floor.
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "ci: marks tests intended for PR CI validation",
    "smoke: marks tests for fast pre-commit validation (<30s total)",
    "no_ollama: marks tests that verify fallback behavior when Ollama is unavailable",
    "regression: marks tests intended for full regression runs",
    "e2e: end-to-end tests against real file trees (no Ollama required)",
    "benchmark: performance benchmark tests (use --benchmark-only to run)",
    "asyncio: marks tests as async (requires pytest-asyncio)",
    "playwright: browser-based E2E tests (requires playwright install chromium; run with --override-ini='addopts=')",
]
filterwarnings = [
    "error::DeprecationWarning:file_organizer",
    "error::PendingDeprecationWarning:file_organizer",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:google",
    "ignore::DeprecationWarning:importlib",
    "ignore::pytest_benchmark.logger.PytestBenchmarkWarning",
]
# pytest-benchmark settings (pass via CLI: --benchmark-min-rounds=3 --benchmark-max-time=30.0)
# benchmark_ prefix keys are NOT supported as ini_options in pytest-benchmark 5.x

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Interrogate configuration (docstring coverage)
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
fail-under = 95
exclude = ["tests", "setup.py", "docs"]
verbose = 1
quiet = false
whitelist-regex = []

# deptry: unused dependency detection
# Run as: deptry src/  (scans source only)
[tool.deptry]
# First-party package — suppress DEP001 false positives from src-layout
known_first_party = ["file_organizer"]
# Only tool-only groups where packages are never imported in application code
pep621_dev_dependency_groups = ["dev", "docs", "build"]
# Map distribution names → import names for packages that differ
[tool.deptry.package_module_name_map]
"Pillow" = "PIL"
"PyMuPDF" = "fitz"
"python-docx" = "docx"
"python-pptx" = "pptx"
"beautifulsoup4" = "bs4"
"pyyaml" = "yaml"
"scikit-learn" = "sklearn"
"opencv-python" = "cv2"
"pydantic-settings" = "pydantic_settings"
"pypdf" = "pypdf"
"striprtf" = "striprtf"
"llama-cpp-python" = "llama_cpp"
"mlx-lm" = "mlx_lm"
[tool.deptry.per_rule_ignores]
# netCDF4: in scientific optional group; deptry has mixed-case matching issues
# redis: optional import via try/except in events/stream.py
DEP001 = ["netCDF4", "redis"]
# lxml: used as bs4 parser string "lxml" (not imported directly)
# python-dotenv: pydantic-settings reads .env files via this package
# alembic: used as CLI migration tool (not imported in application code)
# openpyxl: pandas uses it for Excel I/O (not imported directly)
# fo-core: self-reference in the [all] optional group
DEP002 = [
    "lxml",
    "python-dotenv",
    "alembic",
    "openpyxl",
    "fo-core",
    # pydantic-settings: pydantic's BaseSettings uses it internally; no direct import needed
    "pydantic-settings",
    # netCDF4: mixed-case name causes deptry matching issues; used in scientific.py
    "netCDF4",
    # Pygments: transitive via rich; pinned for CVE-2026-4539
    "Pygments",
    # sqlalchemy: used by alembic migrations and undo/history at runtime; no direct src/ import
    "sqlalchemy",
    # pydantic: used transitively by pydantic-settings; no direct src/ import after refactor
    "pydantic",
]
# redis: optional import via try/except in events/stream.py (transitive dependency)
DEP003 = ["redis"]
